# olist-ecommerce-cloud

./: .gitignore  README.md  olist_dlt.py  pyproject.toml
.dlt/: config.toml  secrets.toml.example
olist_dbt/: dbt_project.yml
olist_dbt/models/marts/: _marts__models.yml  mart_geo_zip3_metrics.sql
olist_dbt/models/staging/: _olist_raw__sources.yml  _staging__models.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_reviews.sql  stg_orders.sql
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
